force-app/main/default/objects/SEC_Control_Mapping__c/SEC_Control_Mapping__c.object-meta.xml
<CustomObject>
    <label>SEC Control Mapping</label>
    <pluralLabel>SEC Control Mappings</pluralLabel>
    <nameField>
        <displayFormat>SCM-{0000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>