force-app/main/default/objects/SEC_Control_Mapping__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Compliant</fullName><default>false</default><label>Compliant</label></value>
            <value><fullName>Non_Compliant</fullName><default>false</default><label>Non-Compliant</label></value>
            <value><fullName>In_Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Not_Applicable</fullName><default>false</default><label>Not Applicable</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>