force-app/main/default/objects/SEC_Control_Mapping__c/fields/Control_Reference__c.field-meta.xml
<CustomField>
    <fullName>Control_Reference__c</fullName>
    <label>Control Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>