force-app/main/default/objects/SEC_Control_Mapping__c/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Direct</fullName><default>false</default><label>Direct</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Gap</fullName><default>false</default><label>Gap</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>