force-app/main/default/objects/SEC_Control_Mapping__c/fields/SEC_Requirement__c.field-meta.xml
<CustomField>
    <fullName>SEC_Requirement__c</fullName>
    <label>SEC Requirement</label>
    <length>255</length>
    <type>Text</type>
    <required>true</required>
</CustomField>